# trinityaudioapi

./: CMakeLists.txt  CMakePresets.json  CarbonTrinityAudioAPIConfig.cmake.in  README.md
.github/workflows/: sync_prs.yml
.teamcity/MacOS/: Project.kt
.teamcity/_Self.kt/: Project.kt
.teamcity/_Self.kt/buildTypes/: PublishToPerforce.kt
cmake/: templatePackageConfig.cmake.in
include/: IAudioInputMgr.h  IStretchAudio.h  ITr2AudEmitter.h  ITr2AudGeometry.h  ITr2Audio.h
tests/: tests.md
